[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "slacktools"
version = '1.5.2'
description = "A common library for working with Slack API"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/slacktools'
packages = [
    { include = 'slacktools' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.1.1"
pandas = "^1.4.2"
loguru = "0.6.0"
pygsheets = "^2.0.5"
pykeepass = "^4.0.1"
requests = "^2.27.1"
slackclient = "^2.9.3"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
tox = "^3.24.5"

[tool.poetry.extras]
test = ["pytest"]
