[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "slacktools"
version = '2.0.10'
description = "A common library for working with Slack API"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/slacktools'
packages = [
    { include = 'slacktools' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
pukr = { git = "https://github.com/barretobrock/pukr.git", branch = "main" }
Flask = "^3"
loguru = "^0"
pandas = "^2"
pygsheets = "^2"
pykeepass = "^4"
pyyaml = "^6"
requests = "^2"
slack_sdk = "^3"
sqlalchemy = "^2"
tabulate = "^0.9"

[tool.poetry.dev-dependencies]
pre-commit = "^3"
pytest = "^7"
pytest-cov = "^4"
flake8 = "^6"
tox = "^4"

[tool.isort]
profile = 'black'
force_grid_wrap = 2
force_sort_within_sections = true
skip_gitignore = true
skip_glob = ['*_pb2.py', '*_pb2_grpc.py']

[tool.poetry.extras]
test = ["pytest"]
